--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                                             <ion-icon name="eye-outline"></ion-icon>
                                         </div>
                             
-                                        <img src="/assets/minimalchat.png" alt="Minimal Chat" loading="lazy">
+                                        <img src="/assets/resumegenerators.png" alt="Minimal Chat" loading="lazy">
                                     </figure>
                             
                                     <h3 class="project-title">Resume Generator</h3>
