contact me change

--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,7 @@
                     </section>
 
                     <section class="contact-form">
-                        <h3 class="h3 form-title">Contact </h3>
+                        <h3 class="h3 form-title">Contact Me</h3>
 
                         <form method="POST" action="https://formspree.io/f/myzpanov" class="form" data-form>
                             <div class="input-wrapper">
